tests/snapshots/run_wpt_conformance__coreml_greaterOrEqual_float16_broadcast_3D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater_or_equal.https.any.js greaterOrEqual float16 broadcast 3D to 4D, coreml
 greater_or_equal :: greaterOrEqual float16 broadcast 3D to 4D: index 2: actual=0 expected=1 tolerance=0
  inputs: inputA: [-8.046875, -5.5234375, -2.09765625, -7.45703125, -5.44921875, 9.8046875, -3.60546875, 4.08984375, -5.06640625, 1.58203125, 5.67578125, -4.33984375, 1.6943359375, 2.92578125, -7, -2.52734375, 1.443359375, 7.86328125, 5.78125, 1.87109375, -0.5234375, 0.434326171875, 8.9375, 1.6572265625]; inputB: [-3.283203125, -1.3974609375, 0.490478515625, -6.8828125]
  expected output: [0, 0, 1, 0, 0, 1, 0, 1, 0, 1 ...] (len=24)
  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)
  expected output full nd:
[0, 0, 1, 0, 0, 1, 0, 1, 0, 1, ...] (len=24, shape=[2, 2, 2, 3])
  actual output full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[2, 2, 2, 3];
    inputB: f16[2, 2, 1];
  }

  nodes {
    [output] = greaterOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
