tests/snapshots/run_wpt_conformance__coreml_greaterOrEqual_float16_two_5D_inputs_with_identical_shapes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater_or_equal.https.any.js greaterOrEqual float16 two 5D inputs with identical shapes, coreml
 greater_or_equal :: greaterOrEqual float16 two 5D inputs with identical shapes: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [-3.5, -2, -1, 0, 1, 2.5, 3, 4.5, 5, -5.5, 6, -6.5, 7, -7.5, 8, -8.5, 9, 10.5, -11, 12.5, -13, 14.5, -15, 16.5 ...] (len=32); inputB: [-3.5, -2, 0, 1, 1, 2, 3.5, 4, 5, -5.5, 5.5, -7, 7, -7.5, 9, -8.5, 9.5, 10.5, -11.5, 12.5, -12.5, 14.5, -16, 16.5 ...] (len=32)
  expected output: [1, 1, 0, 0, 1, 1, 0, 1, 1, 1 ...] (len=32)
  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=32)
  expected output full nd:
[1, 1, 0, 0, 1, 1, 0, 1, 1, 1, ...] (len=32, shape=[2, 2, 2, 2, 2])
  actual output full nd:
[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[2, 2, 2, 2, 2];
    inputB: f16[2, 2, 2, 2, 2];
  }

  nodes {
    [output] = greaterOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
