tests/snapshots/run_wpt_conformance__coreml_greaterOrEqual_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater_or_equal.https.any.js greaterOrEqual float32 1D constant tensors, coreml
 greater_or_equal :: greaterOrEqual float32 1D constant tensors: index 5: actual=0 expected=1 tolerance=0
  inputs: inputA: [-8.049108505249023, -5.522611141204834, -2.097508192062378, -7.455326557159424, -5.450376510620117, 9.802918434143066, -3.604517936706543, 4.088084697723389, -5.068355083465576, 1.5821936130523682, 5.675583839416504, -4.34159517288208, 1.694622278213501, 2.926734685897827, -7.00007438659668, -2.5270822048187256, 1.4437267780303955, 7.862768650054932, 5.782289028167725, 1.8712012767791748, -0.5233999490737915, 0.4343328773975372, 8.93836498260498, 1.6568396091461182] (constant); inputB: [-7.028095245361328, 1.9109991788864136, 3.5765292644500732, 1.7167965173721311, 2.846137523651123, -2.311763048171997, -6.086130142211914, -3.437926769256592, -3.476442813873291, -2.1946563720703125, 2.9962267875671387, -5.540947914123535, 5.098470211029053, 6.775498867034912, 2.4505412578582764, 5.210598945617676, -9.710094451904297, -2.4130282402038574, 8.678308486938477, -9.449530601501465, 0.7702168822288513, -1.5186073780059814, -9.153943061828612, -4.991735935211182] (constant)
  expected output: [0, 0, 0, 0, 0, 1, 1, 1, 0, 1 ...] (len=24)
  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)
  expected output full nd:
[0, 0, 0, 0, 0, 1, 1, 1, 0, 1, ...] (len=24, shape=[24])
  actual output full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[24])

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[24] @bytes([38, 201, 0, 193, 59, 185, 176, 192, 147, 61, 6, 192, 9, 146, 238, 192, 124, 105, 174, 192, 193, 216, 28, 65, 108, 176, 102, 192, 151, 209, 130, 64, 247, 47, 162, 192, 82, 133, 202, 63, 98, 158, 181, 64, 89, 238, 138, 192, 98, 233, 216, 63, 159, 79, 59, 64, 156, 0, 224, 192, 183, 187, 33, 192, 10, 204, 184, 63, 205, 155, 251, 64, 131, 8, 185, 64, 134, 131, 239, 63, 138, 253, 5, 191, 225, 96, 222, 62, 139, 3, 15, 65, 82, 19, 212, 63]);
    operand_1: f32[24] @bytes([40, 230, 224, 192, 159, 155, 244, 63, 219, 229, 100, 64, 253, 191, 219, 63, 30, 39, 54, 64, 237, 243, 19, 192, 148, 193, 194, 192, 254, 6, 92, 192, 10, 126, 94, 192, 64, 117, 12, 192, 46, 194, 63, 64, 114, 79, 177, 192, 171, 38, 163, 64, 227, 208, 216, 64, 171, 213, 28, 64, 58, 189, 166, 64, 140, 92, 27, 193, 14, 111, 26, 192, 90, 218, 10, 65, 71, 49, 23, 193, 239, 44, 69, 63, 186, 97, 194, 191, 141, 118, 18, 193, 77, 188, 159, 192]);
  }

  nodes {
    [output] = greaterOrEqual(operand_0, operand_1, label="");
  }

  outputs { output; }
}
